Fixed main sections alignment and width, made leaderboards back button go back in web history, made leaderboards html be outside of <?php ?>, added privacy policy link

--- a/v/3/4/5/bclick.css
+++ b/v/3/4/5/bclick.css
@@ -18,13 +18,12 @@ body, html {
 }
 
 main {
-    height: 320px;
-    width: 569px;
+    height: 318px;
+    width: 566px;
     position: absolute;
     margin: auto;
     top: 0; bottom: 0;
     left: 0; right: 0;
-    
     border: 1px #2a2a2a solid;
     display: none;
 }
@@ -74,8 +73,8 @@ a:hover { color: rgb(120, 120, 120); text-decoration: underline; }
 .button:hover { background-color: rgb(120, 120, 120); }
 
 .section {
-    width: 189px !important;
-    height: 320px; 
+    width: 187.66666px !important;
+    height: 318px; 
     border: 1px #2a2a2a solid;
     border-left: 0px;
     border-top: 0px;
@@ -226,8 +225,9 @@ a:hover { color: rgb(120, 120, 120); text-decoration: underline; }
 #info div { width: 100%; }
 
 #settingsSection {
-    left: calc(50% + 95px);
+    left: calc(66.5%);
     border-right: 0px;
+    width: 189.6666px !important;
 }
 
 /*===== Messages =====*/
